--- a/Despliegue_AirbnbMexico.ipynb
+++ b/Despliegue_AirbnbMexico.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ffef717e",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
     "        figure1 = px.bar(data_frame=Tabla_frecuencias_top10, x='categorias',\n",
     "\n",
     "                  y= 'frecuencia', title= str('Frecuencia por categoría'))\n",
-    "\n",
+    "        \n",
     "        figure1.update_xaxes(automargin=True)\n",
     "\n",
     "        figure1.update_yaxes(automargin=True)\n",
@@ -773,7 +773,7 @@
     "                )\n",
     "\n",
     "        figure9.update_layout(\n",
-    "            title='Confusion Matrix',\n",
+    "            title=f'Matríz de confusión:{Variable_y}',\n",
     "            xaxis_title=\"Predicted\",\n",
     "            yaxis_title=\"Actual\",\n",
     "            annotations=annotations,\n",
@@ -784,6 +784,7 @@
     "        # Mostrar en Streamlit\n",
     "        st.plotly_chart(figure9)\n",
     "\n",
+    "    with Contenedor_B:\n",
     "        #Calculo la exactitud del modelo\n",
     "        from sklearn.metrics import accuracy_score\n",
     "        exactitud = accuracy_score(y_test, y_pred)\n",
